--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.3.2",
     "codelyzer": "~3.0.1",
+    "jasmine-awesome-report": "0.0.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
